// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack/app always transpiles node_modules when env is production 1`] = `
Object {
  "exclude": /\\^\\\\/node_modules\\\\/core-js/,
  "include": Array [
    "/src",
    "/node_modules",
  ],
  "test": /\\\\\\.jsx\\?\\$/,
  "use": Array [
    Object {
      "loader": "babel-loader",
      "options": Object {
        "cacheDirectory": "/.build-cache",
        "envName": undefined,
        "extends": "/.babelrc",
      },
    },
  ],
}
`;

exports[`webpack/app does not transpile node_modules when DANGEROUSLY_DISABLE_DEPENDENCY_TRANSPILATION true 1`] = `
Object {
  "exclude": /\\^\\\\/node_modules\\\\/core-js/,
  "include": Array [
    "/src",
  ],
  "test": /\\\\\\.jsx\\?\\$/,
  "use": Array [
    Object {
      "loader": "babel-loader",
      "options": Object {
        "cacheDirectory": "/.build-cache",
        "envName": undefined,
        "extends": "/.babelrc",
      },
    },
  ],
}
`;

exports[`webpack/app transpiles node_modules when DANGEROUSLY_DISABLE_DEPENDENCY_TRANSPILATION false 1`] = `
Object {
  "exclude": /\\^\\\\/node_modules\\\\/core-js/,
  "include": Array [
    "/src",
    "/node_modules",
  ],
  "test": /\\\\\\.jsx\\?\\$/,
  "use": Array [
    Object {
      "loader": "babel-loader",
      "options": Object {
        "cacheDirectory": "/.build-cache",
        "envName": undefined,
        "extends": "/.babelrc",
      },
    },
  ],
}
`;
